--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "api": "json-server --watch db.json --port 3001"
   },
   "devDependencies": {
+    "json-server": "^1.0.0-beta.3",
     "vite": "npm:rolldown-vite@7.2.5",
     "vite-plugin-pwa": "^1.2.0"
   },
   "overrides": {
     "vite": "npm:rolldown-vite@7.2.5"
+  },
+  "dependencies": {
+    "@tinyhttp/content-disposition": "^2.2.2",
+    "uuid": "^13.0.0"
   }
 }
