--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "things-pwa",
+  "homepage":"joso1207.github.io/todopwa"
   "private": true,
   "version": "0.0.0",
   "type": "module",
