--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "things-pwa",
-  "homepage":"joso1207.github.io/todopwa"
+  "homepage":"https://joso1207.github.io/TodoPwa/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
